# GreedySnake

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h
compat/: mingw_shim.cpp
component/: GameArea.cpp  GameArea.h  GameOverDialog.cpp  UpBar.cpp  UpBar.h
food/: Food.cpp  Food.h
landmine/: Landmine.cpp  Landmine.h
page/: Difficultypage.cpp  Difficultypage.h  GamePage.cpp  GamePage.h  MiddlePage.cpp  MiddlePage.h  RankingPage.cpp  RankingPage.h  SettingPage.cpp  SettingPage.h  StartPage.cpp  StartPage.h
snake/: Snake.cpp  Snake.h
styles/: dark.qss  light.qss
tools/: Tools.h  tools.cpp
